--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="/img/logo.svg">
+        <img src="img/logo.svg">
         <nav class="navigation">
             <ul class="nav">
                 <li class="nav-item"><a href="index.html">Главная</a></li>
@@ -27,19 +27,19 @@
     <section class="infographic">
         <div class="circles">
             <p>Выбрать дату</p>
-            <img src="/img/ellipse.svg" class="ellipse"> 
+            <img src="img/ellipse.svg" class="ellipse"> 
             &nbsp;&nbsp;&nbsp;
-            <img src="/img/arrow.svg" class="arrow_img">
+            <img src="img/arrow.svg" class="arrow_img">
             <p>Выбрать регион</p>
-            <img src="/img/ellipse.svg" class="ellipse"> 
+            <img src="img/ellipse.svg" class="ellipse"> 
             &nbsp;&nbsp;&nbsp;
-            <img src="/img/arrow.svg" class="arrow_img">
+            <img src="img/arrow.svg" class="arrow_img">
             <p class="text">Указать количество участников и сложность</p>
-            <img src="/img/ellipse.svg" class="ellipse"> 
+            <img src="img/ellipse.svg" class="ellipse"> 
             &nbsp;&nbsp;&nbsp;
-            <img src="/img/arrow.svg" class="arrow_img">
+            <img src="img/arrow.svg" class="arrow_img">
             <p>Оформить заказ</p>
-            <img src="/img/ellipse.svg" class="ellipse"> 
+            <img src="img/ellipse.svg" class="ellipse"> 
         </div> 
     </section>
     <div class="information">
@@ -120,7 +120,7 @@
     <h2 class="special_glav">Акции</h2>
     <div class="special">
         <div class="special-items item-one">
-            <img src="/img/snar.jpg">
+            <img src="img/snar.jpg">
             <a>Скидка за свое снаряжение</a>
             <div class="discription">
                 <p>Если вы берете в поход свою палатку, отвечающую требованиям похода, и готовы подселить в нее кого-нибудь из участников, то предоставляется скидка</p>
@@ -128,7 +128,7 @@
             <button>Подробнее</button>
         </div>
         <div class="special-items item-two">
-            <img src="/img/card.jpg">
+            <img src="img/card.jpg">
             <a>Скидка по клубной карте</a>
             <div class="discription">
                 <p>Клубную карту получают все участники походов продолжительностью более 5 дней, а также участники 5 походов выходного дня.</p>
@@ -136,7 +136,7 @@
             <button>Подробнее</button>
         </div>
         <div class="special-items item-three">
-            <img src="/img/bron.jpg">
+            <img src="img/bron.jpg">
             <a>Скидка за раннее бронирование</a>
             <div class="discription">
                 <p>Собираетесь в поход заранее? Сэкономьте от 3 до 7% от стоимости путешествия!</p>
