--- a/search.html
+++ b/search.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="/img/logo.svg">
+        <img src="img/logo.svg">
         <nav class="navigation">
             <ul class="nav">
                 <li class="nav-item"><a href="index.html">Главная</a></li>
