--- a/search.html
+++ b/search.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/search.css">
+    <link rel="stylesheet" href="..css/main.css">
+    <link rel="stylesheet" href="..css/search.css">
 </head>
 <body>
     <header class="header">
-        <img src="img/logo.svg">
+        <img src="..img/logo.svg">
         <nav class="navigation">
             <ul class="nav">
                 <li class="nav-item"><a href="index.html">Главная</a></li>
