--- a/seat.html
+++ b/seat.html
@@ -27,7 +27,7 @@
     </header>
     <h2>Выбор зон</h2>
     <div class="marsh marsh-one">
-        <img src="..img/cyrodill.svg" width="500px">
+        <img src="..img/cyrodill.svg" width="500px" height="364px">
         <input type="radio" id="imp" name="drone" value="imp">
         
         <label for="imp">Имперский город, также называющийся Сиродил, — столица провинции Сиродил и Империи. Расположен на берегу озера Румаре.</label>
@@ -36,7 +36,7 @@
         
     </div>
     <div class="marsh marsh-two">
-        <img src="..img/skyrim.svg" width="500px">
+        <img src="..img/skyrim.svg" width="500px" height="364px">
 
         <input type="radio" id="imp" name="drone" value="imp">
         <label for="imp">Море Призраков</label>
@@ -44,7 +44,7 @@
         <label for="anvill">Вайтран — один из пяти крупнейших городов Скайрима. Расположен на равнине, занятой тундрой. Является столицей, находящейся в восточной части одноимённого владения.</label>
     </div>
     <div class="marsh marsh-three">
-        <img src="..img/hammerfell.svg" width="500px">
+        <img src="..img/hammerfell.svg" width="500px" height="364px">
         <input type="radio" id="imp" name="drone" value="imp">
         <label for="imp">Вторая столица Хаммерфелла, Сентинель, находится на побережье залива Илиак. Этот торговый город стоит на скалистых гребнях холмов.</label>
         <input type="radio" id="anvill" name="drone" value="">
