--- a/seat.html
+++ b/seat.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="..css/main.css">
-    <link rel="stylesheet" href="..css/seat.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/seat.css">
 </head>
 <body>
     <header class="header">
-        <img src="..img/logo.svg">
+        <img src="img/logo.svg">
         <nav class="navigation">
             <ul class="nav">
                 <li class="nav-item"><a href="index.html">Главная</a></li>
@@ -27,7 +27,7 @@
     </header>
     <h2>Выбор зон</h2>
     <div class="marsh marsh-one">
-        <img src="..img/cyrodill.svg" width="500px" height="364px">
+        <img src="img/cyrodill.svg" width="500px" height="364px">
         <input type="radio" id="imp" name="drone" value="imp">
         
         <label for="imp">Имперский город, также называющийся Сиродил, — столица провинции Сиродил и Империи. Расположен на берегу озера Румаре.</label>
@@ -36,7 +36,7 @@
         
     </div>
     <div class="marsh marsh-two">
-        <img src="..img/skyrim.svg" width="500px" height="364px">
+        <img src="img/skyrim.svg" width="500px" height="364px">
 
         <input type="radio" id="imp" name="drone" value="imp">
         <label for="imp">Море Призраков</label>
@@ -44,14 +44,14 @@
         <label for="anvill">Вайтран — один из пяти крупнейших городов Скайрима. Расположен на равнине, занятой тундрой. Является столицей, находящейся в восточной части одноимённого владения.</label>
     </div>
     <div class="marsh marsh-three">
-        <img src="..img/hammerfell.svg" width="500px" height="364px">
+        <img src="img/hammerfell.svg" width="500px" height="364px">
         <input type="radio" id="imp" name="drone" value="imp">
         <label for="imp">Вторая столица Хаммерфелла, Сентинель, находится на побережье залива Илиак. Этот торговый город стоит на скалистых гребнях холмов.</label>
         <input type="radio" id="anvill" name="drone" value="">
         <label for="anvill">Изначально будучи твердыней наследника Тассада II, А'тора, небольшой остров Строс М'Кай служит сейчас резиденцией для временного губернатора Амиэля Ричтона, который отвечает за безопасность южного побережья провинции.</label>
     </div>
     <div class="marsh marsh-four">
-        <img src="..img/morrowind.svg" width="500px" height="364px">
+        <img src="img/morrowind.svg" width="500px" height="364px">
         <input type="radio" id="imp" name="drone" value="imp">
         <label for="imp">Вварденфелл</label>
         <input type="radio" id="anvill" name="drone" value="">
